####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = ethernet
ethernet_SOURCES = main.cpp 
ethernet_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.cpp 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = ethernet

# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
ethernet_LDFLAGS = $(all_libraries) 
                                                                                
